# CE3102-TaylorSIMD

./: .gitignore  CMakeLists.txt  NOTAS_ACLARATORIAS.txt  README.md  main.cpp  main2.cpp  makefile  taylor
src/: algo.cpp  algo.h  alloc.h  function.h  functor.h  ln_profe.cpp  ln_profe.h  meta.cpp  meta.h  opt.h  optionparser.h  polinomios.h  ref.h  simd.h  test.h
